PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_NDC_Change_Product__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Current_NDC__c</fullName>
        <label>Current NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Pack_Size__c</fullName>
        <label>Current Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product_Name__c</fullName>
        <label>Current Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NDC Change Products</relationshipLabel>
        <relationshipName>NDC_Change_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_SAP_Number__c</fullName>
        <label>Current SAP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change Name</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>NDC Change Products</relationshipLabel>
        <relationshipName>NDC_Change_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_NDC__c</fullName>
        <label>Proposed NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Pack_Size__c</fullName>
        <label>Proposed Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product_Name__c</fullName>
        <label>Proposed Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NDC Change Products (Proposed_Product)</relationshipLabel>
        <relationshipName>NDC_Change_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Proposed_SAP_Number__c</fullName>
        <label>Proposed SAP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NDC Change Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NDCChangeProduct-{000000}</displayFormat>
        <label>NDC Change Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDC Change Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>